# game_lists_site

./: README.md  program.prof  pyproject.toml  requirements.txt  setup.cfg  start.ps1  start.sh
game_lists_site/: __init__.py  __main__.py  auth.py  blog.py  db.py  models.py  schema.sql  test.py  user.py  utilities.py
game_lists_site/algorithms/: game.py  user.py
game_lists_site/blueprints/: auth.py  blog.py  game.py  games.py  index.py  steam.py  user.py  user_stats.py
game_lists_site/experiments/: benchmark.ipynb  cbr.csv  experiments1.py  experiments10.ipynb  experiments2.py  experiments3.py  experiments4.py  experiments5.py  experiments6.ipynb  experiments7.ipynb  experiments8.ipynb  experiments9.ipynb  games.ipynb  hrs.csv  ipython_cell_input.py  mbcf.csv  mobcf.csv  result.csv  result2.csv  users.ipynb
game_lists_site/experiments/errors/: error.json
game_lists_site/static/: games.css  games.js  style.css
game_lists_site/static/user/: features.js  stats.css
game_lists_site/templates/: base.html  game.html
game_lists_site/templates/auth/: login.html  register.html
game_lists_site/templates/blog/: create.html
game_lists_site/templates/games/: base.html  base_stats.html  features.html  games.html  stats.html
game_lists_site/templates/user/: base.html  games.html  recommendation.html  recommendations.html  statistics.html  user.html  user_base.html
game_lists_site/templates/user/statistics/: bar_chart.html  block.html
game_lists_site/templates/user/stats/: base.html  features.html  genres.html  overview.html  tags.html
game_lists_site/utils/: mobcf.py  steam.py  steam_api.py  utils.py
game_lists_site/views/: api.py  root.py
(+3 files in other folders)
