[tool.poetry]
name = "game-lists-site"
version = "0.33.0"
description = "game lists site"
authors = ["nikohonu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "game_lists_site"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.11.1"
Flask = "^2.2.2"
flask-peewee = "^3.0.4"
numpy = "^1.23.3"
peewee = "^3.15.3"
sklearn = "^0.0"
requests = "^2.28.1"
steam = "^1.3.0"
psycopg2 = "^2.9.3"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
snakeviz = "^2.1.1"
isort = "^5.10.1"
ipykernel = "^6.16.0"
djlint = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/nikohonu/game_lists_site"
"Bug Tracker" = "https://github.com/nikohonu/game_lists_site/issues"

[tool.isort]
profile = "black"

[tool.djlint]
profile="jinja"