[metadata]
name = game_lists_site
version = 0.16.0
description = game lists site
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikohonu/game_lists_site
author = Niko Honu
author_email = nikohonu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = game_lists_site
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    game_lists_site = game_lists_site.__main__:main
